# lambda-gt-playground

./: .gitignore  .ocamlformat  LICENSE  Pipfile  README.md  _config.yml  cloc.txt  deploy.sh  dune-project  elm.json  example.dot  lambda_gt_beta.opam  memo.md  more-info.md  playground.html  result.txt  run
docs/: README.md  asset-manifest.json  hands-on.md  index.html  index.md  memo.md  playground.js  precache-manifest.0420d4dc6bca2e7f948da59018b4a309.js  precache-manifest.08ced30ad72563a75c48d082621c1249.js  precache-manifest.0a5c82ddf5a32d12e7d52cee2a010fcc.js  precache-manifest.2185be066059084ea9e4ac45ca0dd3b2.js  precache-manifest.31956cb2bb36a8b5f19377bdc2a8b7b8.js  precache-manifest.7344ec4864b46e575c3a3a6b7373d1ea.js  precache-manifest.a129819e5d7ba4448b62965098ad06d4.js  precache-manifest.b55bfc8785de133297c91061dd99a667.js  precache-manifest.c68a104bddc97cdabf82bf36de74f80c.js  precache-manifest.e4918af04f1e2d1f07c7fa895c2ebb37.js  runtime.js  service-worker.js  tutorial.md
eval/: README.md  dune  eval.ml  match.ml  match_atoms.ml  match_ctxs.ml  postprocess.ml  preprocess.ml  pushout.ml  syntax.ml
example/: README.md  a.lgt  dataflow1.lgt  dataflow2.lgt  dataflow3.lgt  dlist.lgt  dlist2.lgt  dlist3.lgt  dlist4.lgt  err1.lgt  fusion.lgt  let1.lgt  let2.lgt  letrec1.lgt  lltree.lgt  lltree1.lgt  lltree2.lgt  lltree3.lgt  lltree4.lgt  lltree5.lgt  (+2 more)
lambda_gt_gamma/: dune-project  lambda_gt_gamma.opam  run
lambda_gt_gamma/eval/: dune  eval.ml  match_atoms.ml
lambda_gt_gamma/example/: dlist2.lgt
lambda_gt_gamma/js/: dune  index.html  js.ml  playground.js  style.css
lambda_gt_gamma/parser/: dune  lexer.mll  syntax.ml
lambda_gt_gamma/test/: dune  test_synthesis.ml
lambda_gt_gamma/util/: debug_print.ml  dune  result_extra.ml  util.ml
lambda_gt_gamma/vis/: dune  vis.ml
(+132 files in other folders)
